class Booking {
  String description;
  String endTime;
  String externalCalendarUid;
  String externalCalenderName;
  String id;
  String roomName;
  String self;
  String href;
  String rel;
  String type;
  String startTime;

  Booking(this.description, this.endTime, this.externalCalendarUid,
      this.externalCalenderName, this.id, this.roomName, this.self, this.href,
      this.rel, this.type, this.startTime);

}